--- a/index.html
+++ b/index.html
@@ -303,12 +303,13 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .log-row-stats.log-row-stats--mobile{margin-left:auto}
 }
 .log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
-.log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:14px;--scroll-distance:0px;--scroll-duration:0s;--scroll-delay:1.2s;transition:color var(--dur) var(--ease)}
+.log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:14px;--scroll-distance:0px;--scroll-duration:0s;--scroll-delay:1.2s;--scroll-start:0px;--scroll-reset:0px;transition:color var(--dur) var(--ease)}
 .log-row-title.is-adventure .display{font-weight:700}
 .log-row-title.is-activity .display{font-weight:400;color:var(--muted)}
-.log-row-title.scrollable .display{animation:log-row-scroll var(--scroll-duration,8s) ease-in-out infinite alternate;animation-delay:var(--scroll-delay,1.2s)}
-.log-row-date.scrollable .display{animation:log-row-scroll var(--scroll-duration,8s) ease-in-out infinite alternate;animation-delay:var(--scroll-delay,1.2s)}
-.char-toggle-text.scrollable{animation:log-row-scroll var(--scroll-duration,8s) ease-in-out infinite alternate;animation-delay:var(--scroll-delay,1.2s)}
+.log-row-title.scrollable .display{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
+.log-row-date.scrollable .display{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
+.char-toggle-text.scrollable{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
+.dm-card .dm-card-title.scrollable{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
 @media (prefers-reduced-motion:reduce){
   .log-row-title.scrollable .display{animation:none}
   .log-row-date.scrollable .display{animation:none}
@@ -368,8 +369,11 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card-section-content .field{margin:0}
 .card-section-content .kv2{margin:0}
 @keyframes log-row-scroll{
-  0%,12%{transform:translateX(0)}
-  88%,100%{transform:translateX(calc(-1 * var(--scroll-distance)))}
+  0%{transform:translateX(var(--scroll-start,0px))}
+  10%{transform:translateX(0)}
+  60%{transform:translateX(calc(-1 * var(--scroll-distance)))}
+  70%{transform:translateX(calc(-1 * var(--scroll-distance)))}
+  100%{transform:translateX(calc(-1 * (var(--scroll-distance) + var(--scroll-reset,0px))))}
 }
 .titleLine{display:flex;flex-direction:column;gap:6px}
 .date{color:var(--muted);font-size:13px;line-height:1.35}
@@ -1387,14 +1391,19 @@ function refreshScrollableWrapper(wrapper){
   if(distance>1){
     const duration=Math.min(24,Math.max(7,distance/32+6));
     const delay=Math.min(2.5,Math.max(0.8,duration/4));
+    const containerWidth=Math.max(0,wrapper.clientWidth||displayEl.clientWidth||0);
     displayEl.style.setProperty('--scroll-distance',distance+'px');
     displayEl.style.setProperty('--scroll-duration',duration+'s');
     displayEl.style.setProperty('--scroll-delay',delay+'s');
+    displayEl.style.setProperty('--scroll-start',containerWidth+'px');
+    displayEl.style.setProperty('--scroll-reset',containerWidth+'px');
     wrapper.classList.add('scrollable');
   }else{
     displayEl.style.removeProperty('--scroll-distance');
     displayEl.style.removeProperty('--scroll-duration');
     displayEl.style.removeProperty('--scroll-delay');
+    displayEl.style.removeProperty('--scroll-start');
+    displayEl.style.removeProperty('--scroll-reset');
     wrapper.classList.remove('scrollable');
   }
 }
