--- a/index.html
+++ b/index.html
@@ -310,6 +310,9 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-date.scrollable .display{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
 .char-toggle-text.scrollable{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
 .dm-card .dm-card-title.scrollable{animation:log-row-scroll var(--scroll-duration,8s) linear infinite;animation-delay:var(--scroll-delay,1.2s);text-overflow:clip}
+.scrollable-marquee{display:inline-flex;align-items:center;gap:0}
+.scrollable-marquee>.scroll-inner,.scrollable-marquee>.scroll-clone{flex:0 0 auto;white-space:nowrap}
+.scrollable-marquee>.scroll-clone{pointer-events:none}
 @media (prefers-reduced-motion:reduce){
   .log-row-title.scrollable .display{animation:none}
   .log-row-date.scrollable .display{animation:none}
@@ -1384,17 +1387,79 @@ function refreshScrollableWrapper(wrapper){
   if(!wrapper||!wrapper.__display) return;
   const displayEl=wrapper.__display;
   if(!(displayEl instanceof Element)) return;
-  const distance=Math.max(0,displayEl.scrollWidth-displayEl.clientWidth);
-  if(distance>1){
-    const containerWidth=Math.max(0,wrapper.clientWidth||displayEl.clientWidth||0);
+
+  const cleanupMarquee=()=>{
+    const clone=displayEl.__marqueeClone;
+    if(clone&&clone.parentNode===displayEl){
+      clone.remove();
+    }
+    displayEl.__marqueeClone=null;
+    const inner=displayEl.__marqueeInner;
+    if(inner&&inner.parentNode===displayEl){
+      while(inner.firstChild){
+        displayEl.insertBefore(inner.firstChild,inner);
+      }
+      inner.remove();
+    }
+    displayEl.__marqueeInner=null;
+    displayEl.classList.remove('scrollable-marquee');
+  };
+
+  const ensureInner=()=>{
+    let inner=displayEl.__marqueeInner;
+    if(inner&&inner.parentNode!==displayEl){
+      inner=null;
+      displayEl.__marqueeInner=null;
+    }
+    if(!inner){
+      inner=document.createElement('span');
+      inner.className='scroll-inner';
+      while(displayEl.firstChild){
+        inner.appendChild(displayEl.firstChild);
+      }
+      displayEl.appendChild(inner);
+      displayEl.__marqueeInner=inner;
+    }
+    return inner;
+  };
+
+  const containerWidth=Math.max(0,wrapper.clientWidth||displayEl.clientWidth||0);
+  let inner=displayEl.__marqueeInner;
+  if(inner&&inner.parentNode!==displayEl){
+    inner=null;
+    displayEl.__marqueeInner=null;
+  }
+  let innerWidth=0;
+  if(inner){
+    innerWidth=inner.scrollWidth;
+  }else{
+    innerWidth=displayEl.scrollWidth;
+  }
+  const overflowDistance=Math.max(0,innerWidth-containerWidth);
+  if(overflowDistance>1){
+    inner=ensureInner();
+    innerWidth=inner.scrollWidth;
     const gapDistance=Math.max(24,Math.min(containerWidth*0.35,96));
-    const duration=Math.min(36,Math.max(12,distance/18+12));
+    const resetDistance=gapDistance+containerWidth;
+    const duration=Math.min(36,Math.max(12,overflowDistance/18+12));
     const delay=Math.min(3.2,Math.max(1.2,duration/3.8));
-    displayEl.style.setProperty('--scroll-distance',distance+'px');
+    displayEl.style.setProperty('--scroll-distance',overflowDistance+'px');
     displayEl.style.setProperty('--scroll-duration',duration+'s');
     displayEl.style.setProperty('--scroll-delay',delay+'s');
     displayEl.style.setProperty('--scroll-start',containerWidth+'px');
-    displayEl.style.setProperty('--scroll-reset',gapDistance+'px');
+    displayEl.style.setProperty('--scroll-reset',resetDistance+'px');
+    const replacement=inner.cloneNode(true);
+    replacement.classList.add('scroll-clone');
+    replacement.setAttribute('aria-hidden','true');
+    replacement.style.marginLeft=gapDistance+'px';
+    const existingClone=displayEl.__marqueeClone;
+    if(existingClone&&existingClone.parentNode===displayEl){
+      displayEl.replaceChild(replacement,existingClone);
+    }else{
+      displayEl.appendChild(replacement);
+    }
+    displayEl.__marqueeClone=replacement;
+    displayEl.classList.add('scrollable-marquee');
     wrapper.classList.add('scrollable');
   }else{
     displayEl.style.removeProperty('--scroll-distance');
@@ -1402,6 +1467,7 @@ function refreshScrollableWrapper(wrapper){
     displayEl.style.removeProperty('--scroll-delay');
     displayEl.style.removeProperty('--scroll-start');
     displayEl.style.removeProperty('--scroll-reset');
+    cleanupMarquee();
     wrapper.classList.remove('scrollable');
   }
 }
@@ -7462,7 +7528,7 @@ function makeCard(a,idx){
     refreshScrollableWrapper(dateSpan);
   });
 
-  setupTickerRow(main,nameSpan,dateStatsRow,{
+  setupTickerRow(headerMain,nameSpan,dateStatsRow,{
     onToggle:()=>{
       if(nameSpan && typeof nameSpan.__refreshScroll==='function'){
         nameSpan.__refreshScroll();
